--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ button{
 ul li{
     list-style: none;
     display: flex;
-    padding: 10px 20px;
+    padding: 15px 20px;
     font-size: 16px;
     user-select: none;
     cursor: pointer;
@@ -72,15 +72,15 @@ ul li{
 }
 ul li::before{
     content: '';
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     border-radius: 50%;
     margin-right: 10px;
     cursor: pointer;
     position: absolute;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
-    top: 12px;
+    top: 20px;
     left: 8px;
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRX1INSKNipWd3hBCd8Dj1Z6ROdJnmKmpPv1g&s);
  
@@ -89,6 +89,7 @@ ul li::before{
 ul li.checked{
     color: #bdc3c7;
     text-decoration: line-through;
+
 
 }
 ul li.checked::before{
